--- a/foundations/intro-to-css/01-css-methods/css/styles.css
+++ b/foundations/intro-to-css/01-css-methods/css/styles.css
@@ -3,6 +3,6 @@ div
     color:white;
     background-color:red;
     text-align: center;
-    font-weight: 900;
+    font-weight: bold;
     font-size: 32px;
 }
