Add styling for second element

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,3 +3,9 @@
     background-color: #f79cab;
     font-family: Verdana, 'DejaVu Sans' ,sans-serif;
 }
+
+#two
+{
+    color:#1e1eeb;
+    font-size: 36px;
+}
