--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -10,7 +10,7 @@
     font-size: 36px;
 }
 
-.third
+.fontsize
 {
     font-size: 24px;
 }
@@ -18,6 +18,5 @@
 #forth
 {
     background-color: #7af07a;
-    font-size: 24px;
     font-weight: bold;
 }
