--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -11,17 +11,30 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding:16px 8px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  margin: auto;
 }
 
 button {
+  display: block;
+  padding: 8px 24px;
+  margin: 0 auto;
   background: white;
   border: 1px solid #eee;
+}
+.card,
+.title,
+.button-container
+{
+  padding: 8px;
 }
