--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:32px
 }
 
 img {
@@ -11,6 +15,30 @@ img {
   font-size: 36px;
   font-weight: 900;
 }
+
+.images
+{
+  display: flex;
+  justify-content: center;
+  gap:52px;
+}
+.im1,
+.im2,
+.im3,
+.im4
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 200px;
+  
+}
+.text
+{
+  text-align: center;
+}
+
 
 /* do not edit this footer */
 .footer {
